# framework.security.privacy-manager

./: CMakeLists.txt  privacy-manager-server.pc.in
client/: CMakeLists.txt
client/inc/: PrivacyChecker.h  PrivacyManagerClient.h  SocketClient.h  privacy_checker_client.h  privacy_info_client.h  privacy_manager_client.h
client/src/: PrivacyChecker.cpp  PrivacyManagerClient.cpp  SocketClient.cpp  privacy_checker_client.cpp  privacy_info_client.cpp  privacy_manager_client.cpp
common/inc/: PrivacyDb.h  PrivacyIdInfo.h  SocketConnection.h  SocketStream.h  Utils.h  privacy_manager_client_types.h
common/src/: PrivacyDb.cpp  PrivacyIdInfo.cpp
doc/: privacy_manager_doc.h
modules_mobile/client/: CMakeLists.txt
modules_mobile/client/inc/: PrivacyChecker.h
modules_mobile/client/src/: PrivacyChecker.cpp
modules_mobile/res/opt/dbspace/: .privacylist.db
modules_mobile/server/src/: PrivacyManagerServer.cpp
modules_wearable/client/: CMakeLists.txt
modules_wearable/common/inc/: PrivacyIdInfo.h
modules_wearable/common/src/: PrivacyIdInfo.cpp
modules_wearable/res/usr/share/privacy-manager/: privacy-filter-list.ini
modules_wearable/server/inc/: PrivacyManagerServer.h
packaging/: privacy-manager-server.changes  privacy-manager-server.manifest  privacy-manager-server.service  privacy-manager-server.socket  privacy-manager.spec
pkgmgr_plugin/: privileges.cpp
res/opt/dbspace/: .privacylist.db
res/usr/share/privacy-manager/: privacy-filter-list.ini  privacy-location-filter-list.ini
server/: CMakeLists.txt
server/inc/: NotificationServer.h  PrivacyInfoService.h  PrivacyManagerDaemon.h  PrivacyManagerServer.h  SocketService.h
server/src/: NotificationServer.cpp  PrivacyManagerDaemon.cpp  PrivacyManagerServer.cpp  SocketService.cpp  main.cpp
server/src/service/: PrivacyInfoService.cpp
